--- a/src/main/resources/templates/bundleUpload.html
+++ b/src/main/resources/templates/bundleUpload.html
@@ -3,7 +3,7 @@
 <head th:replace="~{fragments/head :: commonHead}">
     <title>번들 업로드</title>
 </head>
-<body>
+<body style="padding-top: 72px;">
     <header th:replace="fragments/header :: commonHeader"></header>
 
     <div class="container mt-5">
