--- a/src/main/resources/templates/postEdit.html
+++ b/src/main/resources/templates/postEdit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title th:text="${bundleTitle} + ' - 게시글 수정'">게시글 수정</title>
 </head>
-<body>
+<body style="padding-top: 72px;">
     <header th:replace="fragments/header :: commonHeader"></header>
 
     <main class="detail-container">
