--- a/src/main/resources/templates/postDetail.html
+++ b/src/main/resources/templates/postDetail.html
@@ -3,7 +3,7 @@
 <head th:replace="~{fragments/head :: commonHead}">
 </head>
 <link rel="stylesheet" th:href="@{/css/postDetail.css}">
-<body>
+<body style="padding-top: 72px;">
 <header th:replace="fragments/header :: commonHeader"></header>
 
 <main class="detail-container">
