--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head :: commonHead"></head>
-<body class="bg-light">
+<body class="bg-light" style="padding-top: 72px;">
 <div th:replace="~{fragments/header :: commonHeader}"></div>
 <div class="container mt-5">
     <div class="row justify-content-center">
